--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">ProjectWork</string>
     <string name="log_out">Log Out</string>
     <string name="settings">Settings</string>
+    <string name="back">Back</string>
 </resources>
