--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
     <string name="log_out">Log Out</string>
     <string name="settings">Settings</string>
     <string name="back">Back</string>
+    <string name="mainmenu">MainMenu</string>
+    <string name="distance">Distance</string>
+    <string name="button">Button</string>
 </resources>
